Abilities System done. To create abilities and test